...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        // Do any additional setup after loading the view.
        
        setUpElements()
        weight.accessibilityIdentifier = "profileCWeightTF"
        height.accessibilityIdentifier = "profileCHeightTF"
        birthday.accessibilityIdentifier = "profileCBirthdayTF"
        nickname.accessibilityIdentifier = "profileCNicknameTF"
        email.accessibilityIdentifier = "profileCEmailTF"
        password.accessibilityIdentifier = "profileCPasswordTF"
        headlineLabel.accessibilityIdentifier = "profileCHeadlineLabel"
        create.accessibilityIdentifier = "profileCCreateButton"
        error.accessibilityIdentifier = "profileCErrorLabel"
        
        datePickerView.datePickerMode = UIDatePicker.Mode.date
        birthday.inputView = datePickerView
        datePickerView.addTarget(self, action: #selector(CreateAccountViewController.datePickerValueChanged), for: UIControl.Event.valueChanged)
        
        let imageTap = UITapGestureRecognizer(target: self, action: #selector(openImagePicker))
...
