...
        hideError()
        loadAccountInfo()
        let tap = UITapGestureRecognizer(target: self, action: #selector(UIInputViewController.dismissKeyboard))
        view.addGestureRecognizer(tap)
        
        password.accessibilityIdentifier = "profilePasswordTF"
        nickname.accessibilityIdentifier = "profileNicknameTF"
        birthday.accessibilityIdentifier = "profileBirthdayTF"
        height.accessibilityIdentifier = "profileHeightTF"
        weight.accessibilityIdentifier = "profileWeightTF"
        updateButton.accessibilityIdentifier = "profileUpdateButton"
        editProfile.accessibilityIdentifier = "profileEditProfileLabel"
        
    }
    
    func loadAccountInfo() {
        // Cite: https://github.com/nealight/Apply
        print("loading account info")
...
